--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.8.0",
     "@types/lodash": "^4.14.179",
     "axios": "^0.26.1",
+    "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "next-redux-wrapper": "^7.0.5",
